--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"  />
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="renderer" content="webkit" />
-    <title>blog_index</title>
+    <title>华仔の博客</title>
     <meta name="keywords" content="华仔的博客">
     <meta name="description" content="华仔的博客">
     <link th:href="@{/css/base.css}" rel="stylesheet" type="text/css">
@@ -30,7 +30,6 @@
                         <li><a href="#">模板分享</a></li>
                         <li><a href="#">模板分享</a></li>
                     </ul>
-
                 </li>
                 <li class="have_second">
                     <a href="#">学习笔记分享</a>
