--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,50 +6,6 @@
 <body>
 <!-- 页眉 -->
 <div th:replace="footer :: header"></div>
-<!--<div class="head_box">-->
-<!--    <div class="header">-->
-<!--        <div class="header_logo">-->
-<!--            <a href="#"><h2>华仔の博客|</h2><h4>天行健,君子自强不息</h4></a>-->
-<!--        </div>-->
-<!--        <div class="header_nav">-->
-<!--            <ul class="clearfix">-->
-<!--                <li><a href="#">个人博客模板分享</a></li>-->
-<!--                <li class="have_second"><a href="#">企业官网模板分享</a>-->
-
-<!--                    <ul class="nav_second">-->
-<!--                        <i></i>-->
-<!--                        <li><a href="#">模板分享</a></li>-->
-<!--                        <li><a href="#">模板分享</a></li>-->
-<!--                        <li><a href="#">模板分享</a></li>-->
-<!--                    </ul>-->
-
-<!--                </li>-->
-<!--                <li class="have_second">-->
-<!--                    <a href="#">学习笔记分享</a>-->
-<!--                    <ul class="nav_second">-->
-<!--                        <i></i>-->
-<!--                        <li><a href="#">CSS笔记</a></li>-->
-<!--                        <li><a href="#">JS笔记</a></li>-->
-<!--                        <li><a href="#">Jquery笔记</a></li>-->
-<!--                    </ul>-->
-<!--                </li>-->
-<!--                <li><a href="#">我的博文</a></li>-->
-<!--                <li><a th:href="@{/author}">关于我</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div class="header_search">-->
-<!--            <a href="#" class="header_search_btn">-->
-<!--                &lt;!&ndash;<img src="img/search.png">&ndash;&gt;-->
-<!--                <i></i>-->
-<!--            </a>-->
-<!--        </div>-->
-
-<!--        <div class="header_nav_small_btn">-->
-<!--            <span class="small_btn"></span>-->
-<!--        </div>-->
-
-<!--    </div>-->
-<!--</div>-->
 
 <div class="nav_hidden_zhanwei"></div>
 
@@ -77,51 +33,30 @@
 <div class="article_box clearfix">
     <div class="left">
         <!--首页最新模板部分-->
-        <div th:replace="common/body_fotter :: new"></div>
+        <div th:replace="common/index_fotter :: new"></div>
+
+
+        <!--首页学习笔记部分-->
+        <div th:replace="common/index_fotter :: learn_note"></div>
+
+
+        <!--首页博文推荐部分-->
+        <div th:replace="common/index_fotter :: recommend_blog"></div>
 <!--        <div class="article_box_one">-->
 <!--            <div class="index_article_title clearfix">-->
-<!--                <h3>最新模板</h3>-->
+<!--                <h3>推荐博文</h3>-->
 <!--                <a href="#">更多></a>-->
 <!--            </div>-->
 <!--            <ul class="index_article">-->
-<!--                <li class="clearfix article_list">-->
-
-<!--                    <a th:href="@{/article}" class="article_list_img">-->
-<!--                        <img th:src="@{/img/article1.png}">-->
-<!--                    </a>-->
-
-<!--                    <a th:href="@{/article}"><h3>张政的博客_天行健_博客类模板分享</h3></a>-->
-<!--                    <p>个人博客类模板分享，自适应手机端，电脑端，ipad端，这套模板是完全手工输入的模板，体积很小，代码简洁，css和js文件只有1个，除了jquery文件外，没有引入别的脚本，很适合用于个人博客类，公司信息类的网站。</p>-->
-
-
-
-<!--                    <div class="article_list_link">-->
-<!--                        <span class="article_list_count">-->
-<!--                            <i class="see_count"></i>-->
-<!--                            查看次数:500-->
-<!--                        </span>-->
-
-<!--                        <span class="article_list_like">-->
-
-
-<!--                            <i class="like_count"></i>-->
-<!--                            喜欢次数:500-->
-
-
-<!--                        </span>-->
-<!--                        <a th:href="@{/article}">查看详细+</a>-->
-<!--                    </div>-->
-
-<!--                </li>-->
 
 <!--                <li class="clearfix article_list">-->
 
 <!--                    <a href="#" class="article_list_img">-->
-<!--                        <img th:src="@{/img/article2.png}">-->
+<!--                        <img th:src="@{/img/article3.jpg}">-->
 <!--                    </a>-->
 
-<!--                    <h3>张政的博客_企业类模板分享_律师事务所类型模板</h3>-->
-<!--                    <p>这是一款模仿网易云音乐导航设计的公司信息类展示的网站，此套模板全适应客户端大小，支持电脑端，手机端，ipad端，多端展示，效果很好，网易云音乐的导航设置很好看，文章中部身体部分采用了动画向上滑动，内容页和列表页简洁明了，是一个很大气的公司律所类网站模板。</p>-->
+<!--                    <h3>在给自己一年时间</h3>-->
+<!--                    <p>在给自己一年时间，如果一年后的还是无法通过自己的努力赚钱的话，那就自己去学个手艺做点小生意，赚钱养家了。</p>-->
 
 
 
@@ -143,198 +78,96 @@
 <!--                    </div>-->
 
 <!--                </li>-->
+<!--                <li class="clearfix article_list">-->
+
+<!--                    <a href="#" class="article_list_img">-->
+<!--                        <img th:src="@{/img/article4.jpg}">-->
+<!--                    </a>-->
+
+<!--                    <h3>今天记录人生中的一件大事</h3>-->
+<!--                    <p>今天记录人生中的一件大事，房子终于装修好了，盼来盼去，总算把房子盼好了。从一无所有到把房子装修好，这中间的路很难走，一直都是我和大青牛两个人在坚持，也少不了奶奶和姐姐的帮助，她们真的是我人生中最重要的3个人了</p>-->
+
+
+
+<!--                    <div class="article_list_link">-->
+<!--                        <span class="article_list_count">-->
+<!--                            <i class="see_count"></i>-->
+<!--                            查看次数:500-->
+<!--                        </span>-->
+
+<!--                        <span class="article_list_like">-->
+
+
+<!--                            <i class="like_count"></i>-->
+<!--                            喜欢次数:500-->
+
+
+<!--                        </span>-->
+<!--                        <a href="#">查看详细+</a>-->
+<!--                    </div>-->
+
+<!--                </li><li class="clearfix article_list">-->
+
+<!--                <a href="#" class="article_list_img">-->
+<!--                    <img th:src="@{/img/article5.jpg}">-->
+<!--                </a>-->
+
+<!--                <h3>己所不欲勿施于人的后半句</h3>-->
+<!--                <p>己所不欲勿施于人的后半句</p>-->
+
+
+
+<!--                <div class="article_list_link">-->
+<!--                        <span class="article_list_count">-->
+<!--                            <i class="see_count"></i>-->
+<!--                            查看次数:500-->
+<!--                        </span>-->
+
+<!--                    <span class="article_list_like">-->
+
+
+<!--                            <i class="like_count"></i>-->
+<!--                            喜欢次数:500-->
+
+
+<!--                        </span>-->
+<!--                    <a href="#">查看详细+</a>-->
+<!--                </div>-->
+
+<!--            </li>-->
+<!--                <li class="clearfix article_list">-->
+
+<!--                    <a href="#" class="article_list_img">-->
+<!--                        <img th:src="@{/img/article6.jpg}">-->
+<!--                    </a>-->
+
+<!--                    <h3>今天坐车回家看装修好的房子咯</h3>-->
+<!--                    <p>今天坐车回家看新装修的房子咯，想想心里都觉得激动，因为这是人生中的第一套房子，很不容易和大青牛两个人走过来。</p>-->
+
+
+
+<!--                    <div class="article_list_link">-->
+<!--                        <span class="article_list_count">-->
+<!--                            <i class="see_count"></i>-->
+<!--                            查看次数:500-->
+<!--                        </span>-->
+
+<!--                        <span class="article_list_like">-->
+
+
+<!--                            <i class="like_count"></i>-->
+<!--                            喜欢次数:500-->
+
+
+<!--                        </span>-->
+<!--                        <a href="#" target="_blank">查看详细+</a>-->
+<!--                    </div>-->
+
+<!--                </li>-->
+
+
 <!--            </ul>-->
 <!--        </div>-->
-        <!--首页学习笔记部分-->
-        <div class="article_box_two">
-            <div class="index_article_title clearfix">
-                <h3>学习笔记</h3>
-                <a href="#">更多></a>
-            </div>
-            <div class="article_btn">
-
-                <div class="article_btn_nav">
-                    <ul>
-                        <li>css笔记</li>
-                        <li>js笔记</li>
-                        <li>jquery笔记</li>
-                        <li>帝国cms笔记</li>
-                    </ul>
-                </div>
-
-                <div class="article_btn_box">
-
-
-                    <div class="article_btn_box_item clearfix">
-                        <a href="javascript:;" class="article_btn_box_item_img">
-                            <img th:src="@{/img/article2.png}">
-                        </a>
-                        <ul>
-                            <li><i></i><a href="#" th:src="@{/img/notimg.gif}">这里是学习笔记这里是学习笔记这里是学习笔记这里是学习笔记这里是学习笔记</a><p>这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分</p></li>
-                            <li><i></i><a href="#" th:src="@{/img/notimg.gif}">这里是学习笔记这里是学习笔记这里是学习笔记这里是学习笔记这里是学习笔记</a><p>这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分</p></li>
-                            <li><i></i><a href="#" th:src="@{/img/notimg.gif}">这里是学习笔记这里是学习笔记这里是学习笔记这里是学习笔记这里是学习笔记</a><p>这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分</p></li>
-                        </ul>
-                    </div>
-
-                    <div class="article_btn_box_item clearfix">
-                        <a href="#" class="article_btn_box_item_img">
-                            <img th:src="@{/img/article2.png}">
-                        </a>
-                        <ul>
-                            <li><i></i><a href="#" th:src="@{/img/notimg.gif}">这里是学习笔记1</a><p>这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分</p></li>
-                            <li><i></i><a href="#" th:src="@{/img/notimg.gif}">这里是学习笔记1</a><p>这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分</p></li>
-                            <li><i></i><a href="#" th:src="@{/img/notimg.gif}">这里是学习笔记1</a><p>这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分</p></li>
-                        </ul>
-                    </div>
-                    <div class="article_btn_box_item clearfix">
-                        <a href="#" class="article_btn_box_item_img">
-                            <img th:src="@{/img/article2.png}">
-                        </a>
-                        <ul>
-                            <li><i></i><a href="#" th:src="@{/img/notimg.gif}">这里是学习笔记2</a><p>这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分</p></li>
-                            <li><i></i><a href="#" th:src="@{/img/notimg.gif}">这里是学习笔记2</a><p>这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分</p></li>
-                            <li><i></i><a href="#" th:src="@{/img/notimg.gif}">这里是学习笔记2</a><p>这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分这里是学习笔记的简介部分</p></li>
-                        </ul>
-                    </div>
-                    <div class="article_btn_box_item clearfix">
-                        <a href="#" class="article_btn_box_item_img">
-                            <img th:src="@{/img/article2.png}">
-                        </a>
-                        <ul>
-                        </ul>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-        <!--首页博文推荐部分-->
-        <div class="article_box_one">
-            <div class="index_article_title clearfix">
-                <h3>推荐博文</h3>
-                <a href="#">更多></a>
-            </div>
-            <ul class="index_article">
-
-                <li class="clearfix article_list">
-
-                    <a href="#" class="article_list_img">
-                        <img th:src="@{/img/article3.jpg}">
-                    </a>
-
-                    <h3>在给自己一年时间</h3>
-                    <p>在给自己一年时间，如果一年后的还是无法通过自己的努力赚钱的话，那就自己去学个手艺做点小生意，赚钱养家了。</p>
-
-
-
-                    <div class="article_list_link">
-                        <span class="article_list_count">
-                            <i class="see_count"></i>
-                            查看次数:500
-                        </span>
-
-                        <span class="article_list_like">
-
-
-                            <i class="like_count"></i>
-                            喜欢次数:500
-
-
-                        </span>
-                        <a href="#">查看详细+</a>
-                    </div>
-
-                </li>
-                <li class="clearfix article_list">
-
-                    <a href="#" class="article_list_img">
-                        <img th:src="@{/img/article4.jpg}">
-                    </a>
-
-                    <h3>今天记录人生中的一件大事</h3>
-                    <p>今天记录人生中的一件大事，房子终于装修好了，盼来盼去，总算把房子盼好了。从一无所有到把房子装修好，这中间的路很难走，一直都是我和大青牛两个人在坚持，也少不了奶奶和姐姐的帮助，她们真的是我人生中最重要的3个人了</p>
-
-
-
-                    <div class="article_list_link">
-                        <span class="article_list_count">
-                            <i class="see_count"></i>
-                            查看次数:500
-                        </span>
-
-                        <span class="article_list_like">
-
-
-                            <i class="like_count"></i>
-                            喜欢次数:500
-
-
-                        </span>
-                        <a href="#">查看详细+</a>
-                    </div>
-
-                </li><li class="clearfix article_list">
-
-                <a href="#" class="article_list_img">
-                    <img th:src="@{/img/article5.jpg}">
-                </a>
-
-                <h3>己所不欲勿施于人的后半句</h3>
-                <p>己所不欲勿施于人的后半句</p>
-
-
-
-                <div class="article_list_link">
-                        <span class="article_list_count">
-                            <i class="see_count"></i>
-                            查看次数:500
-                        </span>
-
-                    <span class="article_list_like">
-
-
-                            <i class="like_count"></i>
-                            喜欢次数:500
-
-
-                        </span>
-                    <a href="#">查看详细+</a>
-                </div>
-
-            </li>
-                <li class="clearfix article_list">
-
-                    <a href="#" class="article_list_img">
-                        <img th:src="@{/img/article6.jpg}">
-                    </a>
-
-                    <h3>今天坐车回家看装修好的房子咯</h3>
-                    <p>今天坐车回家看新装修的房子咯，想想心里都觉得激动，因为这是人生中的第一套房子，很不容易和大青牛两个人走过来。</p>
-
-
-
-                    <div class="article_list_link">
-                        <span class="article_list_count">
-                            <i class="see_count"></i>
-                            查看次数:500
-                        </span>
-
-                        <span class="article_list_like">
-
-
-                            <i class="like_count"></i>
-                            喜欢次数:500
-
-
-                        </span>
-                        <a href="#" target="_blank">查看详细+</a>
-                    </div>
-
-                </li>
-
-
-            </ul>
-        </div>
 
 
         <div>
@@ -404,18 +237,20 @@
 
     <div class="right">
         <!--个人介绍部分-->
-        <div class="self_info right_box">
-            <img th:src="@{/img/self.jpg}">
-            <div class="self_info_text">
-                <h3>大青牛和穿山甲</h3>
-                <div>
-                    <p>以彼之长，增长自身</p>
-                    <p>有匪君子，如切如磋，如琢如磨。</p>
-                    <p>天将降大任于斯人也，必先苦其心志、磨其胫骨、饿其体肤</p>
-                </div>
-                <a href="#">Read More</a>
-            </div>
-        </div>
+        <div th:replace="common/index_fotter :: user_info"></div>
+<!--        <div class="self_info right_box">-->
+<!--            <img th:src="@{/img/self.jpg}">-->
+<!--            <div class="self_info_text">-->
+<!--                <h3>大青牛和穿山甲</h3>-->
+<!--                <div>-->
+<!--                    <p>以彼之长，增长自身</p>-->
+<!--                    <p>有匪君子，如切如磋，如琢如磨。</p>-->
+<!--                    <p>天将降大任于斯人也，必先苦其心志、磨其胫骨、饿其体肤</p>-->
+<!--                </div>-->
+<!--                <a href="#">Read More</a>-->
+<!--            </div>-->
+<!--        </div>-->
+
         <!--个人介绍隐藏部分，只在右侧被翻到最上面显示-->
         <div class="self_info_scroll_bottom right_box">
             <img th:src="@{/img/self.jpg}">
