新增404统一处理

--- a/src/main/resources/templates/common/index_fotter.html
+++ b/src/main/resources/templates/common/index_fotter.html
@@ -266,7 +266,7 @@
 <div class="self_info right_box" th:fragment="user_info">
     <img th:src="@{/img/self.jpg}">
     <div class="self_info_text">
-        <h3>大青牛和穿山甲</h3>
+        <h3>蚂蚁打大象</h3>
         <div>
             <p>以彼之长，增长自身</p>
             <p>有匪君子，如切如磋，如琢如磨。</p>
