--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -19,7 +19,7 @@
 <div class="head_box" th:fragment="header">
     <div class="header">
         <div class="header_logo">
-            <a th:href="@{/}"><h2>华仔の博客|</h2><h4>天行健,君子自强不息</h4></a>
+            <a th:href="@{/index}"><h2>华仔の博客|</h2><h4>天行健,君子自强不息</h4></a>
         </div>
         <div class="header_nav">
             <ul class="clearfix data_clearfix">
@@ -87,8 +87,8 @@
             <p><i>站点声明：</i></p>
             <p>1、本站创建的目的以学习交流为基础，记录日常生活中遇到的事物。</p>
             <p>2、本站中所有分享的模板只供个人学习研究使用，未经允许不得用于任何商业目的。</p>
-            <p>3、本站所有文章均可转载，请注明出处，欢迎大家看到喜欢的文章帮忙转发点赞。举报意见邮箱：446157433@qq.com</p>
-            <p>Copyright © 2014-2019 大青牛爱穿山甲 保留所有版权</p>
+            <p>3、本站所有文章均可转载，请注明出处，欢迎大家看到喜欢的文章帮忙转发点赞。举报意见邮箱：729370500@qq.com</p>
+            <p>Copyright © 2017-2019 蚂蚁打大象 保留所有版权</p>
         </div>
     </div>
 
